2011-12-09 Fri  Jari Aalto  <jari.aalto@cante.net>

	* doc/Makefile (link-check): New rule.
	(clean): Add *.log

	* doc/index.txt:
	(top level): Correct Freecode addresses from .net to .com.
	Check links. Update Copyright year.
	(4.13 Gee, where do I put all those): Correct sentences.
	(13.1 Mime Bibliography): Delete. Non-existing link.
	(1.4 Version information): Update.

2010-12-05 Sun  Jari Aalto  <jari.aalto@cante.net>

	* Makefile (check): New target to check broken links.

	* doc/Makefile (index.html): Correct program call options. Add
	--disclaimer-file to fix CC/GPL discrepancy in generated HTML footer.

	* doc/disclaimer.txt: New.

	* doc/index.txt:
	(top level): Run link check.
	(1.3 Abbreviations and thanks): Update my email address.
	(1.4 Version information): Add entry.
	(1.5 Document layout and maintenance): Add t2html
	URL. Update version control URL.
	(2.2 Procmail resources): Remove broken URL.
	(19.8 The .forward file must be real file): Remove Broken URL and
	replace with more recent one by Neale Pickett <neale@woozle.org>.

2010-05-12 Wed  Jari Aalto  <jari.aalto@cante.net>

	* doc/index.txt:
	(whole file): Change osolete "formail -rt" examples to "formail
	-r" whcih is the correct way in recent procmail version. Renumber
	headinging. Generate TOC.
	(Version information): Add latest changes. Check links.
	(How to truncate headers): Fix heading position.

2010-02-13 Sat  Jari Aalto  <jari.aalto@cante.net>

	* doc/index.css: Correct style issues to conform CSS 2.1

	* doc/index.txt:
	(13.5 Converting HTML body to plain text): remove
	lynx urls.
	(2.5 Procmail code to filter UBE): Update junkfilter URL.
	(13.2 Mime content type application/ms-tnef): Update
	Microsoft URL.
	(23.1 To find out more about mail): Update URL.
	(4.13 Gee, where do I put all those ! * doc/$ ??): Fix
	indentation in recipe example.

2008-09-21  Jari Aalto  <jari.aalto@cante.net>

	* doc/pm-tips.txt (1.5 Document layout and maintenance): Correct
	www.gnu.org address.
