@@ -193,17 +193,14 @@ What is procmail documentation project?
     Mail Filtering and Robots</a> page for information about related
     utilities for various other platforms.
 
-    <P> <I class="show"> Procmail documentation project </I> is collection
-    of several procmail documents that provide information about compiling,
-    installation, recipe tips, and other valuable information on Mail in
-    general and UBE (Unsolicited Bulk Email). This CVS repository is
-    offered for all interested parties that would like to share procmail
-    knowlegle with other people.
+    <P> <I class="show"> Procmail documentation project </I> is a collection
+    of procmail documentation ttips that provide information about how to use
+    Procmail effectively to hand daily mail.
 
     <P>
     See also other related procmail projects, like
 
-    <A HREF="http://freecode.net/projects/procmail-lib">
+    <A HREF="http://freecode.com/projects/procmail-lib">
     Procmail module library project at Freecode.
     </A>
 
@@ -307,9 +304,6 @@ Contact
           </TD>
         </TR>
     </TABLE>
-
-
-
 
 </BODY>
 </HTML>
